# securefix

./: .bandit  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bandit.yml  corpus_downloader.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  results.json  securefix.py  test_git_fixed.py  test_git_mcp_isolated.py  test_git_mcp_schema.py  test_github_mcp_schema.py  test_mcp_connection.py  test_mcp_simple.py
.github/workflows/: securefix.yml  test.yml
config/: bandit.yml
cve/: db.py  scanner.py
docs/: DOCKER.md  LLAMACPP_SETUP.md  MCP_SETUP.md
remediation/: config.py  corpus_builder.py  fix_cache.py  fix_knowledge_store.py  llm_factory.py  markdown_processor.py  remediation_engine.py  vulnerability_retriever.py
sast/: bandit_mapper.py  bandit_scanner.py  rules.py  scanner.py
sast/detectors/: secrets.py  sql_injection.py
securefix/: cli.py  corpus_downloader.py  models.py
securefix/cve/: db.py  scanner.py
securefix/mcp/: __init__.py  code_patcher.py  mcp_client.py  pr_content.py  pr_logic.py  repo_utils.py
securefix/remediation/: config.py  corpus_builder.py  fix_knowledge_store.py  llm_factory.py  remediation_engine.py  vulnerability_retriever.py
securefix/remediation/llm/: __init__.py  llm_base.py  llm_factory.py  llm_google.py  llm_llamacpp.py  llm_ollama.py
securefix/sast/: bandit_mapper.py  bandit_scanner.py
tests/: conftest.py  test_bandit_scanner.py  test_cli.py  test_code_patcher_duplication.py  test_corpus_builder.py  test_cve_scanner.py  test_fix_cache.py  test_fix_knowledge_store.py  test_git_fixed.py  test_git_mcp_isolated.py  test_git_mcp_schema.py  test_github_mcp_schema.py  test_llm_factory.py  test_llm_llamacpp.py  test_mcp_client.py  test_mcp_code_patcher.py  test_mcp_connection.py  test_mcp_integration.py  test_mcp_pr_content.py  test_mcp_simple.py  test_remediation_engine.py  test_sast_scanner.py  test_secrets.py  test_securefix.py  test_sql_injection.py  test_vulnerability_retriever.py
